# 0.00.49 (51534) May 4, 2011
Attached knob to the prism corner for rotation
Fixed: exception in prism break when resetting after creating and returning a prism
Fixed: when going from mystery to custom, the slider should reappear
Reordered tabs so that prisms comes before more tools
renamed "n=?" to "What is n?"
# 0.00.48 (51214) Apr 26, 2011
Converted curved objects to use analytical expressions instead of polygonal approximations, resolves #2832
Remove the associated prism from the model when dropped back in the toolbox, resolves #2833
Handled review issues
# 0.00.47 (51069) Apr 22, 2011
Fixed: laser can be rotated out of the play area
Fixed: laser can be dragged out of the play area
Fixed: prisms can be dragged out of the play area
Fixed: intensity sensor can be dragged out of the play area
Fixed: protractor can be dragged out of the play area
Fixed: tools cannot be dragged out of the play area when dragging out of the toolbox
refactored base class Box for use in VBox and HBox, created HBox class
Fixed: when dragging tools out of the toolbox they can be dragged out of the visible region
Constrained velocity sensor node to remain in the play area
Refactored MediumControlPanel to use PhetPComboBox instead of PComboBox, see #705
# 0.00.46 (50881) Apr 19, 2011
Fixed: reset all does not return the laser to default position, affects all tabs
Fixed: reset all does not have a confirm dialog, affects all tabs
Improved documentation and minor refactors
# 0.00.45 (50760) Apr 18, 2011
Added a border around combo boxes to make them easier to see on Mac
# 0.00.44 (50757) Apr 16, 2011
Reduced sim speed, keeping the new default speed to be the previous value for "slow", and expanding the range
# 0.00.43 (50754) Apr 16, 2011
# 0.00.42 (50592) Apr 13, 2011
Reduced the size of the protractor in the "prism break" tab to 45% of the original size to make it easier to measure refracted light angles
# 0.00.41 (50577) Apr 12, 2011
Fixed: slider knobs appear in the wrong place on Mac