@@ -1,3 +1,4 @@
+Show the rotation drag handle behind the prism shape so it looks like it attaches solidly instead of sticking out on top
 # 0.00.49 (51534) May 4, 2011
 Attached knob to the prism corner for rotation
 Fixed: exception in prism break when resetting after creating and returning a prism
